@@ -22,6 +22,7 @@
  * add placeholders for missing rows in range query pseudo-RR (CASSANDRA-2680)
  * remove no-op HHOM.renameHints (CASSANDRA-2693)
  * clone super columns to avoid modifying them during flush (CASSANDRA-2675)
+ * allow writes to bypass the commitlog for certain keyspaces (CASSANDRA-2683)
 
 
 0.8.0-final
